# AkiLink-ESP

./: README.md  编译前ReadMe_已过期.md
ESP32_5Modes/: platformio.ini
ESP32_5Modes/SRC_NEW/: ESP32-WIFI-UDP.ino.cpp  ESP32_Transmission_5Modes_V3.ino.cpp  air_ble.cpp  air_ble.h  air_spp.cpp  air_spp.h  air_tcp.cpp  air_udp.cpp  air_udp.h  buf_rules.cpp
ESP32_5Modes/SRC_NEW_2/: wifi_config.cpp
ESP32_5Modes/SRC_OLD/: air_ble.cpp  air_ble.h  air_spp.cpp  air_spp.h  air_tcp.cpp  air_udp.h  buf_rules.cpp  data_config.h  led_state.cpp  led_state.h  modules_run.cpp  web_tune.cpp  web_tune.h  wifi_config.cpp  wifi_config.h
ESP32_5Modes/data/: index.html
ESP32_5Modes/data_in_development/: DS写的WebConfig_V2.html  index_1_simple.html  index_2_failed.html  index_3_failed.html  index_4_final.html
ESP32_5Modes/src/: .clang-format  air_ble.cpp  air_ble.h  air_spp.cpp  air_spp.h  air_tcp.h  buf_rules.h  data_config.cpp  data_config.h  led_state.cpp  modules_run.cpp  modules_run.h  web_tune.cpp  wifi_config.cpp
ESP32_5Modes/笔记草稿/: 排版辅助注释字符—1.h  排版辅助注释字符—2.h  排版辅助注释字符—3.h  笔记.cpp
ESP32_C3_4Modes/: platformio.ini
ESP32_C3_4Modes/data/: index.html
ESP32_C3_4Modes/src/: ESP32_Transmission_5Modes_V3.ino.cpp  air_tcp.cpp  air_tcp.h  air_udp.cpp  buf_rules.cpp  (+8 more)
ESP32_Test_Robust_ESP-IDF/: CMakeLists.txt  platformio.ini  sdkconfig.defaults  sdkconfig.esp32dev  sdkconfig.esp32dev.old
ESP32_Test_Robust_ESP-IDF/src/: CMakeLists.txt  Most_Robust.c  air_udp.c  air_udp.h  app_config.h  buf_ops.c  buf_ops.h  wifi_setup.c  wifi_setup.h
ESP_8266_8285_TCP_UDP/: Lora笔记  platformio.ini
(+21 files in other folders)
